cabal-version: 2.2
name:          end
version:       0
synopsis:      Evolving Non-Determinism
description:
  Evolving Non-Determinism is an optimization or search algorithm.
  It works by randomly sampling the search space,
  selecting (evolving) better and better candidates.

category:      Algorithms
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
author:        Oleg.Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later
license-file:  LICENSE

source-repository head
  type:     git
  location: https://github.com/phadej/end.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    END
    END.Example.Ramp
    END.Example.SortingNetwork
    END.Example.FinnishRandonneur

  other-modules:
    END.Internal.Config
    END.Internal.Population
    END.Internal.Problem
    END.Internal.Threads
    END.Internal.Success

  -- GHC boot libraries
  build-depends:
    , base          ^>=4.12
    , containers    ^>=0.6.0.1
    , deepseq       ^>=1.4.4.0
    , transformers  ^>=0.5.6.1

  build-depends:
    , async
    , clock
    , hashable
    , parallel
    , primitive
    , splitmix
    , vector
    , integer-logarithms

test-suite end-example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -rtsopts -threaded
  hs-source-dirs:   example
  main-is:          Main.hs
  build-depends:
    , base
    , containers
    , end
